Add library sidecar comments
